--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
+/*------------------------------------*    $VARIABLES
+\*------------------------------------*/
+/*------------------------------------*    $DESIGNS
+\*------------------------------------*/
 body {
+  background-color: #fff;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-}
+  font-family: sans-serif; }
+
+.content__container {
+  width: 640px;
+  margin: 0 auto; }
