--- a/src/stylesheets/components/_index.scss
+++ b/src/stylesheets/components/_index.scss
@@ -20,6 +20,12 @@ body {
   font-family: sans-serif;
 }
 
+main {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
 .content__container {
   width: 640px;
   margin: 0 auto;
