--- a/src/stylesheets/components/_app.scss
+++ b/src/stylesheets/components/_app.scss
@@ -1,34 +1,49 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css?family=Nunito|Open+Sans');
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
+/*------------------------------------*\
+    $VARIABLES
+\*------------------------------------*/
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
+$background-color: #f3f3f3;
+$title-color: #404242;
+$text-color: #686b6d;
+$highlight-color: #939daf;
+$light-blue: #c3d4e2;
+$extra-light-blue: #dbe6ff;
 
-.App-title {
-  font-size: 1.5em;
-}
+/*------------------------------------*\
+    $DESIGNS
+\*------------------------------------*/
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-
-@import 'index';
+@import 'reset';
 @import 'header';
 @import 'user';
 @import 'footer';
+
+body {
+  background-color: $background-color;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+.page-root {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
+
+.content__container {
+  width: 960px;
+  margin: baseline(2) auto;
+}
+
+p {
+  font-size: baseline(1);
+  color: #657786;
+  margin-bottom: baseline(2/3);
+}
