--- a/src/stylesheets/components/_app.scss
+++ b/src/stylesheets/components/_app.scss
@@ -8,23 +8,48 @@ $background-color: #f3f3f3;
 $title-color: #404242;
 $text-color: #686b6d;
 $highlight-color: #939daf;
+
+$white: #fff;
+$dark-gray: #333447;
+$medium-gray: #becad5;
+$light-gray: #e2e2e2;
 $light-blue: #c3d4e2;
 $extra-light-blue: #dbe6ff;
 
+$font-family: 'Open Sans', sans-serif;
+$font-weight-light: 300;
+$font-weight-regular: 400;
+$font-weight-heavy: 700;
+$font-height: baseline(1.5);
+
 /*------------------------------------*\
-    $DESIGNS
+    $ BASIC DESIGNS AND IMPORTS
 \*------------------------------------*/
 
 @import 'reset';
-@import 'header';
+@import 'search';
 @import 'user';
 @import 'footer';
 
+html,
 body {
-  background-color: $background-color;
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  left: 0;
+  top: 0;
+  font-size: 100%;
+}
+
+body {
+  background-color: $background-color;
+}
+
+* {
+  font-family: $font-family;
+  color: $dark-gray;
+  line-height: $font-height;
 }
 
 .page-root {
@@ -38,12 +63,31 @@ main {
 }
 
 .content__container {
-  width: 960px;
   margin: baseline(2) auto;
 }
 
+/*------------------------------------*\
+    $ BASIC FONT STYLING
+\*------------------------------------*/
+
 p {
+  font-weight: $font-weight-light;
+  line-height: $font-height;
   font-size: baseline(1);
-  color: #657786;
-  margin-bottom: baseline(2/3);
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.375rem;
+}
+
+h4 {
+  font-size: 1.125rem;
 }
