--- a/src/stylesheets/components/_user.scss
+++ b/src/stylesheets/components/_user.scss
@@ -4,35 +4,66 @@
   background-color: #fff;
   box-shadow: 2px 2px 5px 0px #E0E0E0;
   display: grid;
-  grid-template-columns: 30% 70%;
+  grid-template-columns: 100%;
+  margin-top: baseline(1);
+
+  @media only screen and (min-width: $breakpoint-large) {
+    grid-template-columns: 30% 70%;
+    margin-top: baseline(4);
+  }
 
   &__image {
     grid-column: 1;
+    grid-row: 1;
     display: inline-block;
 
     img{
+      margin-top: baseline(-2);
+      margin-bottom: baseline(2);
+      width: 50%;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
       max-width: 100%;
       height: auto;
-      margin-top: baseline(-1);
-      margin-left: baseline(-1);
-      margin-bottom: baseline(-1.5);
-      border-radius: baseline(1);
-      box-shadow: 2px 2px 5px 0px #E0E0E0;
+
+      @media only screen and (min-width: $breakpoint-large) {
+        margin-bottom: 0;
+        margin-left: baseline(2);
+      }
     }
   }
 
   &__info {
-    grid-column: 2;
+    grid-column: 1;
+    grid-row: 2;
     display: inline-block;
-    margin-left: baseline(1);
-    padding: baseline(2);
+    padding: baseline(2) baseline(1);
+
+    @media only screen and (min-width: $breakpoint-large) {
+      grid-column: 2;
+      grid-row: 1;
+      margin-left: baseline(1);
+      padding: baseline(2);
+    }
 
     &--top {
       text-align: center;
+      margin-bottom: baseline(1);
     }
 
     &--bottom {
-      text-align: justify;
+      grid-row: 2;
+      grid-column: 1 / 2;
+      text-align: center;
+      margin-bottom: baseline(2);
+    }
+
+    &--count {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      text-align: center;
+      margin-bottom: baseline(1);
     }
   }
 
@@ -46,7 +77,62 @@
     width: 50%;
     height: 1px;
     display: block;
-    background-color: #e2e2e2;
+    background-color: $light-gray;
     margin: 20px auto 25px;
+  }
+
+  &__stats {
+    padding: 0 baseline(1);
+    border-right: 1px solid $light-gray;
+    color: $medium-gray;
+
+    &:last-child {
+      border-right: 0;
+    }
+
+    span {
+      display: block;
+      font-weight: $font-weight-heavy;
+      font-size: baseline(1.6);
+    }
+  }
+
+  &__additional-info {
+    width: 100%;
+    grid-row: 3;
+    grid-column: 1 / 3;
+    display: grid;
+
+    @media only screen and (min-width: $breakpoint-large) {
+      grid-template-columns: repeat(2, 1fr);
+      grid-row: 2;
+    }
+  }
+
+  &__tab {
+    display: inline-block;
+    padding: baseline(1);
+    border-top: 1px solid $light-gray;
+    text-align: center;
+
+    @media only screen and (min-width: $breakpoint-large) {
+      border-right: 1px solid $light-gray;
+      cursor: pointer;
+      transition: all 0.2s linear;
+
+      &:last-child {
+        border-right: 0;
+      }
+
+      &:hover {
+        background-color: $medium-gray;
+        transition: all 0.3s linear;
+        color: $white;
+      }
+    }
+
+    &--active {
+      background-color: $light-gray;
+    }
   }
 }
