--- a/src/stylesheets/components/_user.scss
+++ b/src/stylesheets/components/_user.scss
@@ -7,9 +7,13 @@
   grid-template-columns: 100%;
   margin-top: baseline(1);
 
-  @media only screen and (min-width: $breakpoint-large) {
+  @media only screen and (min-width: $breakpoint-med) {
     grid-template-columns: 30% 70%;
     margin-top: baseline(4);
+  }
+
+  @media only screen and (min-width: $breakpoint-large) {
+    grid-template-columns: 25% 75%;
   }
 
   &__image {
@@ -27,8 +31,8 @@
       max-width: 100%;
       height: auto;
 
-      @media only screen and (min-width: $breakpoint-large) {
-        margin-bottom: 0;
+      @media only screen and (min-width: $breakpoint-med) {
+        width: 100%;
         margin-left: baseline(2);
       }
     }
@@ -40,7 +44,7 @@
     display: inline-block;
     padding: baseline(2) baseline(1);
 
-    @media only screen and (min-width: $breakpoint-large) {
+    @media only screen and (min-width: $breakpoint-med) {
       grid-column: 2;
       grid-row: 1;
       margin-left: baseline(1);
@@ -101,9 +105,12 @@
     width: 100%;
     grid-row: 3;
     grid-column: 1 / 3;
+  }
+
+  &__tablist {
     display: grid;
 
-    @media only screen and (min-width: $breakpoint-large) {
+    @media only screen and (min-width: $breakpoint-med) {
       grid-template-columns: repeat(2, 1fr);
       grid-row: 2;
     }
@@ -115,7 +122,7 @@
     border-top: 1px solid $light-gray;
     text-align: center;
 
-    @media only screen and (min-width: $breakpoint-large) {
+    @media only screen and (min-width: $breakpoint-med) {
       border-right: 1px solid $light-gray;
       cursor: pointer;
       transition: all 0.2s linear;
